<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DialogoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/spinner_asignatura"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="226dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.017"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txt_descripcion"
            android:layout_width="336dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/hint_descripcion"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_asignatura" />

        <EditText
            android:id="@+id/txt_entrega"
            android:layout_width="337dp"
            android:layout_height="42dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/hint_fechaentrega"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_descripcion" />

        <EditText
            android:id="@+id/txt_horaentrega"
            android:layout_width="337dp"
            android:layout_height="42dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/hint_horaentrega"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_entrega" />

        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="52dp"
            android:text="@string/btn_guardar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_horaentrega" />

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:text="@string/btn_cancelar"
            app:layout_constraintEnd_toStartOf="@+id/btn_guardar"
            app:layout_constraintTop_toBottomOf="@+id/txt_horaentrega" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>